@@ -6,6 +6,9 @@ Changelog for Poi
 Poi branch maurits-inline-response-adding
 -----------------------------------------
 
+- Add browser test for adding a tracker, issue and response.
+  [maurits]
+
 - Unit test the response browser views.
   [maurits]
 
